fix(textarea): aligned paddings with design (#DS-3720) (#702)

--- a/packages/components/textarea/textarea-tokens.scss
+++ b/packages/components/textarea/textarea-tokens.scss
@@ -1,6 +1,6 @@
 .kbq-textarea {
     --kbq-textarea-size-min-height: 64px;
     --kbq-textarea-size-max-height: 96px;
-    --kbq-textarea-size-padding-vertical: var(--kbq-size-xs);
+    --kbq-textarea-size-padding-vertical: 5px;
     --kbq-textarea-size-padding-horizontal: var(--kbq-size-m);
 }
